CHANGED THE NAME TO OKIOS AND MADE SOME BUG FIXES

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Oikos</string>
+    <string name="app_name">Okios</string>
     <string name="app_tagline">Auto SMS tracking • Recurring expenses • Split with friends • All Free</string>
     <string name="support_email">theblankstateteam@gmail.com</string>
 </resources>
